fixed: prevent double click to zoom on mobile

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
 
 * {
     box-sizing: border-box;
+    touch-action: manipulation;
+    /* Disable double-tap zoom universally */
 }
 
 body {
